kubernetes/applications/apps/tasmoadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasmoadmin
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - tasmoadmin.shreck.co.uk
    secretName: tasmoadmin-tls
  rules:
  - host: tasmoadmin.shreck.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tasmoadmin
            port:
              number: 80
